<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources" tools:locale="en">
    <string name="app_name">MonTransit</string>
    <string name="opening_unknown">Opening&#8230;</string>
    <string name="opening_and_label">Opening %s&#8230;</string>
    <string name="opening_failed_and_uri">No app installed to open %s!</string>
    <string name="web_browser">Web Browser</string>
    <string name="opening_main_app_and_removing_icon">Opening the main application&#8230;\n\n(temporary icon removed)</string>
    <string name="please_install_main_app_from_google_play">Opening Play Store&#8230;\n\nPlease install the main application (free).</string>
    <string name="google_play">Google Play</string><!-- for subscriptions -->
    <string name="google_play_store">Play Store</string>
    <string name="permission_label_read">@string/provider_permission_label_read</string>
    <string name="permission_description_read">@string/provider_permission_description_read</string>
    <string name="provider_permission_label_read">Read data from transport agencies.</string>
    <string name="provider_permission_description_read">This permission is used to read data from transport agencies.</string>
    <string name="receiver_permission_label_broadcast">Broadcast transport agencies data change.</string>
    <string name="receiver_permission_description_broadcast">This permission is used to broadcast transport agencies data change.</string>
    <string name="ellipsis">&#8230;</string>
    <string name="error">Error</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="drop_off_only">&#128695; Drop off only</string>
    <string name="traffic_congestion">Traffic congestion</string>
    <string name="unknown_delay_short">&#9203;</string>
    <string name="bikes">Bikes</string>
    <string name="docks">Docks</string>
    <string name="no_bikes">0 bikes</string>
    <string name="no_default_bikes">0 regulars</string>
    <string name="no_e_bikes">0 e-bikes &#9889;</string>
    <string name="no_docks">0 docks</string>
    <string name="not_installed">Not installed</string>
    <string name="not_public">Not public</string>
    <string name="locked">Locked</string>
    <string name="closed">Closed</string>
    <plurals name="bikes_quantity">
        <item quantity="one">%d bike</item>
        <item quantity="other">%d bikes</item>
    </plurals>
    <plurals name="default_bikes_quantity">
        <item quantity="one">%d regular</item>
        <item quantity="other">%d regulars</item>
    </plurals>
    <plurals name="e_bikes_quantity">
        <item quantity="one">%d e-bike &#9889;</item>
        <item quantity="other">%d e-bikes &#9889;</item>
    </plurals>
    <plurals name="docks_quantity">
        <item quantity="one">%d dock</item>
        <item quantity="other">%d docks</item>
    </plurals>
    <string name="app_status_not_installed">&#65291;</string><!-- ＋: Fullwidth Plus Sign -->
    <string name="app_status_not_installed_a11y">Add</string>
    <string name="app_status_warning">&#9888;</string><!-- ⚠: Warning Sign -->
    <string name="app_status_warning_a11y">Problem!</string>
    <string name="app_status_installed">&#10003;</string><!-- ✓: Check mark symbol -->
    <string name="app_status_installed_a11y">Installed</string>
    <string name="app_status_update_available">&#8635;</string><!-- ↻: Clockwise Triangle-Headed Arrow -->
    <string name="app_status_update_available_a11y">Update</string>
    <string name="db_channel_name">Planned schedule</string>
    <string name="db_channel_description">Notification showing planned schedule install/update progress.</string>
    <string name="db_deploying">Installing planned schedules&#8230;</string>
    <string name="db_upgrading">Updating planned schedules&#8230;</string>
    <string name="unknown_address">Unknown address</string>
    <string name="please_install_new_app_from_google_play">Opening Play Store&#8230;\n\nPlease install the new application (free).</string>
    <string name="please_uninstall_old_app">Please uninstall the old application.</string>
    <string name="please_uninstall_app_device_not_supported">Please uninstall the application.\n\nSorry, this device is not supported anymore.</string>
    <string name="module_app_installed_default"><b>Transit agency data</b> for <b>MonTransit</b> installed &#10003; .</string>
    <string name="module_app_installed_and_module"><![CDATA[ <b>%s</b> for <b>MonTransit</b> installed &#10003;. ]]></string>
    <string name="congratulations_module_app_installed_default"><![CDATA[ Congratulations! <br/><br/>You have installed the <b>transit agency data</b> for <b>MonTransit</b>. ]]></string>
    <string name="congratulations_module_app_installed_and_module"><![CDATA[ Congratulations! <br/><br/>You have installed <b>%s</b> for <b>MonTransit</b>. ]]></string>
    <string name="why_title">Why?</string>
    <string name="why_multiple_apps">This app adds the transit agency information to the main <b>MonTransit</b> app which is <b>compatible with many transit agencies</b> this way.\nThis helps reduce costs and <b>keep the app 100% free</b>.</string>
    <string name="why_multiple_apps_rds">This app adds transit agency information (<b>full schedule accessible offline</b>…) to the main <b>MonTransit</b> app which is <b>compatible with many transit agencies</b> this way.\nThis helps reduce costs and <b>keep the app 100% free</b>.</string>
    <string name="keep_temporary_app_icon">Keep temporary app icon</string>
    <string name="action_open_main_app">Open MonTransit</string>
    <string name="action_download_main_app">Download MonTransit (free)</string>
    <plurals name="text_opening_main_app_in_and_seconds">
        <item quantity="one">Opening in %d second&#8230;</item>
        <item quantity="other">Opening in %d seconds&#8230;</item>
    </plurals>
    <string name="text_opening_main_app_cancel">(touch screen to cancel)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_it_on_google_play_store_badge">Get it on the Play Store</string>
</resources>